[gd_scene load_steps=6 format=3 uid="uid://vqlr2ybj600k"]

[ext_resource type="Script" path="res://MenuPrincipale/seleziona_livello.gd" id="1_e846b"]
[ext_resource type="Theme" uid="uid://ccaecbltae2m5" path="res://TemaButtons.tres" id="1_oev41"]
[ext_resource type="Texture2D" uid="uid://ckq4crtj4sx0b" path="res://MenuPrincipale/Immagini/Decorazioni/NPC_model_MOOSHnGUN 4.png" id="2_n20ms"]
[ext_resource type="Texture2D" uid="uid://x21bpgvc88mm" path="res://MenuPrincipale/Immagini/Decorazioni/Mooshy.png" id="3_qb52n"]
[ext_resource type="Texture2D" uid="uid://bqa0tsbyj5eem" path="res://MenuPrincipale/Immagini/Logi/sfondo.png" id="3_sw3sh"]

[node name="SelezionaLivello" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_oev41")
script = ExtResource("1_e846b")

[node name="Sfondo2" type="Node2D" parent="."]
position = Vector2(831, 353)
scale = Vector2(1.98931, 2)

[node name="Sprite2D" type="Sprite2D" parent="Sfondo2"]
position = Vector2(65.5524, 91)
scale = Vector2(0.794832, 0.837909)
texture = ExtResource("3_sw3sh")

[node name="NpcModelMoosHnGun4" type="Sprite2D" parent="Sfondo2"]
position = Vector2(353.5, 30.5)
scale = Vector2(0.4, 0.4)
texture = ExtResource("2_n20ms")

[node name="Mooshy" type="Sprite2D" parent="Sfondo2"]
position = Vector2(-295, 184.5)
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_qb52n")

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 214.0
offset_top = 12.0
offset_right = 254.0
offset_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)

[node name="Tutorial_Livello0" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.629
anchor_bottom = 0.311
offset_left = -303.5
offset_top = -162.5
offset_right = -158.5
offset_bottom = -139.5
text = "Tutorial - Livello 0"

[node name="Livello1" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 0.21
offset_left = -290.0
offset_top = -109.0
offset_right = -145.0
offset_bottom = -86.0
text = "Livello 1"

[node name="Livello2" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 0.21
offset_left = -290.0
offset_top = -55.0
offset_right = -145.0
offset_bottom = -32.0
text = "Livello 2"

[node name="Livello3" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 0.21
offset_left = -290.0
offset_top = -1.0
offset_right = -145.0
offset_bottom = 22.0
text = "Livello 3"

[node name="Livello4" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 0.21
offset_left = -290.0
offset_top = 53.0
offset_right = -145.0
offset_bottom = 76.0
text = "Livello 4"

[node name="Livello5" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 0.21
offset_left = -290.0
offset_top = 107.0
offset_right = -145.0
offset_bottom = 130.0
text = "Livello 5"

[node name="Control2" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -18.0
offset_top = 12.0
offset_right = 22.0
offset_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)

[node name="Livello6" type="Button" parent="Control2"]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 0.21
offset_left = 51.0
offset_top = -161.0
offset_right = 197.0
offset_bottom = -138.0
text = "         Livello 6         "

[node name="Livello7" type="Button" parent="Control2"]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 0.21
offset_left = 51.0
offset_top = -107.0
offset_right = 197.0
offset_bottom = -84.0
text = "Livello 7"

[node name="Livello8" type="Button" parent="Control2"]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 0.21
offset_left = 51.0
offset_top = -53.0
offset_right = 197.0
offset_bottom = -30.0
text = "Livello 8"

[node name="Livello9" type="Button" parent="Control2"]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 0.21
offset_left = 51.0
offset_top = 1.0
offset_right = 197.0
offset_bottom = 24.0
text = "Livello 9"

[node name="Livello10" type="Button" parent="Control2"]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 0.21
offset_left = 51.0
offset_top = 55.0
offset_right = 197.0
offset_bottom = 78.0
text = "Livello 10"

[node name="Indietro" type="Button" parent="Control2"]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 0.21
offset_left = 51.0
offset_top = 109.0
offset_right = 197.0
offset_bottom = 132.0
text = "Indietro"

[connection signal="pressed" from="Control/Tutorial_Livello0" to="." method="_on_tutorial_livello_0_pressed"]
[connection signal="pressed" from="Control/Livello1" to="." method="_on_livello_1_pressed"]
[connection signal="pressed" from="Control2/Indietro" to="." method="_on_indietro_pressed"]
